fixed input hompage width on mobile resolution

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -26,5 +26,11 @@
   }
 }
 
-
+@media(max-width: 850px) {
+  .searchbar-container {
+    div {
+      width: 90%;
+    }
+  }
+}
 
